--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,21 +1,33 @@
-.app {
-  .brand {
-    position: absolute;
-    $size: 40px;
-    top: 5px;
-    left: 5px;
-    display: inline-block;
-    width: $size;
-    height: $size;
-    background-size: 80%;
-    margin: 0 10px 0 0;
-    border-radius: $size / 2;
-  }
-  nav :global(.fa) {
-    font-size: 2em;
-    line-height: 20px;
-  }
-}
+@import '../../theme/variables.scss';
+
 .appContent {
-  margin: 50px 0; // for fixed navbar
+  background-color: #f2f2f2;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height:58px;
+  background-color: #f7f7f7;
+  border-top:1px solid $borderColor;
+  .naviBtn {
+    text-align: center;
+    display: inline-block;
+    width: 25%;
+    a {
+      font-size: 12px;
+      text-decoration: none;
+      color: $text-color;
+      .btImage{
+        width:24px;
+        margin-top:10px;
+        margin-bottom:4px;
+      }
+      p.btnameOn{ color:$mainColor;}
+    }
+  }
+
 }
