--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -14,3 +14,42 @@
   color: #33e0ff;
   background-color: transparent;
 }
+
+
+body{
+  font-family: "黑体","Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+*{
+  margin:0;
+  padding:0;
+}
+ul,li{
+  list-style: none;
+  margin-bottom: 0px;
+}
+p{
+  margin-bottom: 0px;
+}
+
+.left{
+  float: left;
+}
+.right{
+  float: right;
+}
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.clearfix{*zoom:1;}
+
+
+//top card bg
+.topCardBg{
+  background-color: #fff;
+  border-bottom:1px solid #ececec;
+}
