--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -18,7 +18,39 @@ $brand-warning: #f0ad4e;
 $brand-danger: #d9534f;
 $brand-info: #5bc0de;
 
-$text-color: #333;
-
 $font-size-base: 14px;
 $font-family-sans-serif: "Helvetica Neue", Helvetica, sans-serif;
+
+//Colors
+$text-color: #797979;
+$xsfontColor: #b4b4b4;
+$jzfontColor: #505050;
+
+$mainColor: #41c299;
+$borderColor: #d8d8d8;
+
+//page margin
+$lrmargin: 14px;
+$tbmargin: 10px;
+
+$jzfontSize: 16px;
+
+// Bootstrap Variables
+$brand-primary: darken(#428bca, 6.5%);
+$brand-secondary: #e25139;
+$brand-success: #5cb85c;
+$brand-warning: #f0ad4e;
+$brand-danger: #d9534f;
+$brand-info: #5bc0de;
+
+
+
+
+// navi
+$navi-font-size: 18px;
+$navi-height: 60px;
+$navi-font-color: #fff;
+$navi-bg-color: #0087f4;
+
+// border
+$border-color: #ddd;
