--- a/src/containers/DatePlan/DatePlan.scss
+++ b/src/containers/DatePlan/DatePlan.scss
@@ -5,15 +5,15 @@
   margin-bottom: 10px;
   font-size: $jzfontSize;
   position: relative;
+  text-align: center;
   li.curTab {
     color: #fff !important;
     background-color: $mainColor;
   }
   .scheduleFilterBtn{
-    position: absolute;
-    top: 6px;
+    position: fixed;
+    top: 54px;
     right: 0;
-    width: 100%;
     h3{
       color: $mainColor;
       font-weight: normal;
@@ -45,6 +45,9 @@
             padding: 2px 14px;
             border-radius: 14px;
             margin:0 6px;
+          }
+          span.dateSpan{
+            padding:2px 6px;
           }
           span.curSpan{
             background-color: $mainColor;
