--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -2,7 +2,7 @@
  * Override Bootstrap styles that you can't modify via variables here.
  *
  */
-
+@import "variables.scss";
 .navbar-brand {
   position: relative;
   padding-left: 50px;
@@ -48,6 +48,13 @@ p,h3{
 }
 .clearfix{*zoom:1;}
 
+
+.noResult{
+  background-color: #ffffff;
+  padding: 10px 14px;
+  border-top: 1px solid #d8d8d8;
+  border-bottom: 1px solid #d8d8d8;
+}
 
 //top card bg
 .topCardBg{
