筛选下拉样式

--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -49,6 +49,7 @@ p,h3{
 .clearfix{*zoom:1;}
 
 
+//return not result
 .noResult{
   background-color: #ffffff;
   padding: 10px 14px;
@@ -61,3 +62,4 @@ p,h3{
   background-color: #fff;
   border-bottom:1px solid #ececec;
 }
+
