--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -11,6 +11,7 @@
   bottom: 0;
   width: 100%;
   height:58px;
+  z-index: -1;
   background-color: #f7f7f7;
   border-top:1px solid $borderColor;
   .naviBtn {
