--- a/src/containers/DatePlan/DatePlan.scss
+++ b/src/containers/DatePlan/DatePlan.scss
@@ -14,6 +14,8 @@
     position: fixed;
     top: 54px;
     right: 0;
+    width: 100%;
+    height: 100%;
     h3{
       color: $mainColor;
       font-weight: normal;
@@ -38,13 +40,20 @@
           position: absolute;
           padding:4px 6px 4px 0;
         }
-        p{
+        section{
           margin-left: 38px;
+          text-align: left;
+          width: 100%;
+          header span{
+            color: $mainColor;
+          }
           span{
             display: inline-block;
-            padding: 2px 14px;
+            padding: 2px 0px;
             border-radius: 14px;
             margin:0 6px;
+            width: 26.3%;
+            text-align: center;
           }
           span.dateSpan{
             padding:2px 6px;
@@ -208,4 +217,14 @@
   line-height: 44px;
   color: #fff;
   border-radius: 50%;
+}
+
+//modol background mask
+.modolBackDrop{
+  position: fixed;
+  background-color: rgba(0,0,0,0.1);
+  top:276px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
 }
