--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,21 +6,6 @@
  *
  */
 
-// Custom Colors
-$cyan: #33e0ff;
-$humility: #777;
-
-// Bootstrap Variables
-$brand-primary: darken(#428bca, 6.5%);
-$brand-secondary: #e25139;
-$brand-success: #5cb85c;
-$brand-warning: #f0ad4e;
-$brand-danger: #d9534f;
-$brand-info: #5bc0de;
-
-$font-size-base: 14px;
-$font-family-sans-serif: "Helvetica Neue", Helvetica, sans-serif;
-
 //Colors
 $text-color: #797979;
 $xsfontColor: #b4b4b4;
@@ -30,10 +15,10 @@ $mainColor: #41c299;
 $borderColor: #d8d8d8;
 
 //page margin
-$lrmargin: 14px;
-$tbmargin: 10px;
+$lrmargin: .14rem;
+$tbmargin: .1rem;
 
-$jzfontSize: 16px;
+$jzfontSize: .16rem;
 
 // Bootstrap Variables
 $brand-primary: darken(#428bca, 6.5%);
@@ -54,3 +39,7 @@ $navi-bg-color: #0087f4;
 
 // border
 $border-color: #ddd;
+
+
+
+
