--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -4,6 +4,7 @@
   background-color: #f2f2f2;
   height: 100%;
   overflow-y: scroll;
+  margin-bottom: 60px;
 }
 
 .footer {
@@ -11,7 +12,6 @@
   bottom: 0;
   width: 100%;
   height:58px;
-  z-index: -1;
   background-color: #f7f7f7;
   border-top:1px solid $borderColor;
   .naviBtn {
