--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -66,6 +66,25 @@ span,i{
   padding:0;
 }
 
+
+//input
+input, select{
+  width: 100%;
+  height: .3rem;
+  line-height: .3rem;
+  border-radius: 2px;
+  border: 1px solid $borderColor;
+  background: #fff;
+}
+.select{
+  .caret{
+    position: absolute;
+    top: .12rem;
+    right: .1rem;
+    color: $mainColor;
+  }
+}
+
 //return not result
 .noResult{
   background-color: #ffffff;
