--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,6 +19,7 @@ $lrmargin: .14rem;
 $tbmargin: .1rem;
 
 $jzfontSize: .16rem;
+$xsfontSize: .12rem;
 
 // Bootstrap Variables
 $brand-primary: darken(#428bca, 6.5%);
