--- a/src/containers/Duty/Duty.scss
+++ b/src/containers/Duty/Duty.scss
@@ -2,18 +2,35 @@
 .duty{
   .selectMonth{
     position: absolute;
-    top: 0;
+    top: .08rem;
     right: $lrmargin;
+    color: #fff;
     select{
       background: transparent;
       border: 0px solid #fff;
     }
     p{
-      color: #fff !important;
-      margin-top: .1rem;
-      margin-left: .04rem;
+      width: 0; 
+      border-left: .06rem solid transparent; border-top: .1rem solid #fff;
+      border-right: .06rem solid transparent;
+      position: absolute;
+      top: .11rem;
+      right: 0;
+    }
+    .changeDutyRecord{
+      margin-right: .1rem;
+      margin-top: .05rem;
+      i{
+        width: .16rem;
+        height: .2rem;
+        background: url('../../images/sprite.png');
+        background-position: 0 -.98rem;
+        background-size: 1.6rem;
+        margin-right: .02rem;
+      }
     }
   }
+
 
   .dutyTop {
     background-color: #fff;
@@ -40,8 +57,11 @@
         td{
           border-bottom: 1px solid #ececec;
           border-left: 1px solid $borderColor;
+          width: 14.28%;
           div{
             position: relative;
+            height: .72rem;
+            border: 2px solid #fff;
             .dateDay{
               margin-bottom: .06rem;
               padding-top: .12rem;
@@ -50,17 +70,40 @@
               font-size: .12rem;
               color: $text-color;
               margin-bottom: .2rem;
+              i{
+                float: left;
+                width: .12rem;
+                height: .14rem;
+                color: #fff;
+                background: url('../../images/sprite.png');
+                background-size: 2.4rem;
+              }
+              i.levelFir{
+                background-position: 0 -0px;
+              }
+              i.levelSec{
+                background-position: 0 -96px;
+              }
+              i.levelThr{
+                background-position: 0 -113px;
+              }
+              i.levelFour{
+                background-position: 0 -130px;
+              }
             }
             .dateSelf{
-            position: absolute;
+              position: absolute;
               top: 0;
-              left: .04rem;
+              left: 0rem;
               width: .12rem;
               height: .24rem;
               background: url('../../images/sprite.png');
               background-size: 2rem;
               background-position: 0 -.3rem;
             }
+          }
+          div.divCur{
+            border: 2px solid $mainColor;
           }
         }
         td.curTd{
@@ -79,3 +122,14 @@
     text-align: center;
   }
 }  
+
+.appartDuty .dutyTop table tr td div{
+  height: 1.12rem;
+}
+
+@media(max-width: 370px) {
+  .duty .dutyTop table tr td div .dateSelf{
+    background-size: 1.6rem;
+    background-position: 0 -.26rem;
+  }
+}
