--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -9,7 +9,7 @@ html{
 
 body{
   font-family: "黑体",SimHei,"Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: .15rem;
+  font-size: .14rem;
   background-color: #f2f2f2;
 }
 
@@ -56,7 +56,7 @@ span,i{
 .mainBtn{
   background-color: $mainColor;
   color: #fff;
-  font-size: $jzfontSize;
+  font-size: .16rem;
   height: .4rem;
   line-height: .4rem;
   border-radius: 30px;
@@ -98,7 +98,7 @@ input, select{
 //top card bg
 .topCardBg{
   background-color: #fff;
-  border-bottom:1px solid #ececec;
+  border-bottom:1px solid #d8d8d8;
 }
 
 //tip
@@ -123,4 +123,24 @@ input, select{
 .bodyBgWhiteZindex{
   position: relative;
   z-index: 10;
+}
+
+
+//sanjiao
+.sanjiao-top{
+   width: 0; border-left: .08rem solid transparent; border-bottom: .08rem solid #fff;
+     border-right: .08rem solid transparent;
+}
+.sanjiao-bt{
+  width: 0; 
+  border-left: .06rem solid transparent; border-top: .1rem solid #fff;
+  border-right: .06rem solid transparent;
+}
+.sanjiao-left{
+   width: 0; border-bottom: .08rem solid transparent; border-top: .08rem solid transparent;
+     border-right: .08rem solid #fff;
+}
+.sanjiao-right{
+   width: 0; border-bottom: .08rem solid transparent; border-top: .08rem solid transparent;
+     border-left: .08rem solid #fff;
 }
