--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -18,7 +18,8 @@ $borderColor: #d8d8d8;
 $lrmargin: .14rem;
 $tbmargin: .1rem;
 
-$jzfontSize: .16rem;
+$jzfontSize: .15rem;
+$jzjzfontSize: .17rem;
 $xsfontSize: .12rem;
 
 // Bootstrap Variables
