--- a/src/components/HeadNaviBar/HeadNaviBar.scss
+++ b/src/components/HeadNaviBar/HeadNaviBar.scss
@@ -2,20 +2,20 @@
 
 .naviContainer {
   width: 100%;
-  height: 50px;
+  height: .44rem;
   background-color: $mainColor;
   color: #fff;
-  line-height: 50px;
-  font-size: 18px;
+  line-height: .44rem;
+  font-size: $jzjzfontSize;
   font-weight: normal;
   text-align: center;
 }
 
 .backArrow {
   position: absolute;
-  left: 14px;
+  left: $lrmargin;
   top: 0px;
   z-index: 300;
-  font-size: 26px;
+  font-size: .26rem;
 }
 
