--- a/src/containers/DatePlan/DatePlan.scss
+++ b/src/containers/DatePlan/DatePlan.scss
@@ -1,7 +1,6 @@
 @import '../../theme/variables.scss';
 
 .dateTop {
-  background-color: #fff;
   margin-bottom: 10px;
   font-size: $jzfontSize;
   position: relative;
@@ -69,132 +68,90 @@
           }
         }
       }
-    }
+    }  
   }
-  
-  section{
-    color: $jzfontColor;
-    font-size: $jzfontSize;
-    text-align: center;
-    table{
-      width: 100%;
-      tr{
-        width: 14.28%;
-        th,td{
-          text-align: center;
-          
-        }
-        td{
-          border-bottom: 1px solid #ececec;
-          border-left: 1px solid $borderColor;
-          div{
-            padding: 10px 0;
-            border:2px solid #fff;
+  .datePlanPicker{
+    background: #fff;
+  }
+  .scheduleItem{
+    margin-top: $tbmargin;
+    .curDaytitle{
+      text-align: right;
+      padding:6px $lrmargin;
+      color: $xsfontColor;
+      border-bottom: 1px solid $borderColor;
+    }
+    .curDayContact{
+      padding:12px $lrmargin 2px;
+      color: $jzfontColor;
+      li{
+        div{
+          height: 32px;
+          i{
+            font-size: 12px;
+            border-radius: 50%;
+            font-style: normal;
+            width: 20px;
+            height: 20px;
+            line-height: 19px;
+            text-align: center;
+            margin-right: 12px;
+          }
+          .timeStart{
+            color: $xsfontColor;
+            padding-right: 4px;
+          }
+          .timeRange{
+            padding:0px 4px;
+          }
+          .outside{
+            font-size: 12px;
+            background-color: #ececec;
+            padding:2px 10px;
+          }
+          .conflict{
+            font-size: 12px;
+            color: #eb3b50;
+            i{
+              margin-right: 3px;
+              margin-left: 6px;
+              display: inline-block;
+              width: 18px;
+              height: 18px;
+              text-align: center;
+              background-color: #eb3b50;
+              color: #fff;
+            }
           }
         }
-        td.curTd{
-          div{
-            border:2px solid $mainColor;
+        .checkPlan{
+          i{
+            color: #f5a623;
+            border: 1px solid #f5a623;
           }
         }
-        td:first-child{
-          border-left:1px solid #fff;
+        .metting{
+          i{
+            color: #4a90e2;
+            border: 1px solid #4a90e2;
+          }
         }
-        th{
-          padding:10px 0;
-          border-left:1px solid $border-color;
-          background-color: $mainColor;
-          font-weight: normal;
-          color: #fff;
+        .opera{
+          i{
+            color: #33c7a6;
+            border: 1px solid #33c7a6;
+          }
         }
-        th:first-child{
-          border-left: 1px solid #fff;
+        .duty{
+          i{
+            color: #2faf2d;
+            border: 1px solid #2faf2d;
+          }
         }
       }
     }
   }
 }
-
-
-
-
-
-.curDaytitle{
-  text-align: right;
-  padding:6px $lrmargin;
-  color: $xsfontColor;
-  border-bottom: 1px solid $borderColor;
-}
-.curDayContact{
-  padding:12px $lrmargin 2px;
-  color: $jzfontColor;
-  li{
-    div{
-      height: 32px;
-      i{
-        font-size: 12px;
-        border-radius: 50%;
-        font-style: normal;
-        width: 20px;
-        height: 20px;
-        line-height: 19px;
-        text-align: center;
-        margin-right: 12px;
-      }
-      .timeStart{
-        color: $xsfontColor;
-        padding-right: 4px;
-      }
-      .timeRange{
-        padding:0px 4px;
-      }
-      .outside{
-        font-size: 12px;
-        background-color: #ececec;
-        padding:2px 10px;
-      }
-      .conflict{
-        font-size: 12px;
-        color: #eb3b50;
-        i{
-          margin-right: 3px;
-          margin-left: 6px;
-          display: inline-block;
-          width: 18px;
-          height: 18px;
-          text-align: center;
-          background-color: #eb3b50;
-          color: #fff;
-        }
-      }
-    }
-    .checkPlan{
-      i{
-        color: #f5a623;
-        border: 1px solid #f5a623;
-      }
-    }
-    .metting{
-      i{
-        color: #4a90e2;
-        border: 1px solid #4a90e2;
-      }
-    }
-    .opera{
-      i{
-        color: #33c7a6;
-        border: 1px solid #33c7a6;
-      }
-    }
-    .duty{
-      i{
-        color: #2faf2d;
-        border: 1px solid #2faf2d;
-      }
-    }
-  }
-}
-
 
 .addBigBtn{
   position: fixed;
@@ -221,7 +178,6 @@
   bottom: 0px;
   right: 0px;
 }
-
 
 .dayItemOut{
   height: 26px;
