--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -6,11 +6,12 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
+	z-index: 1000;
 }
 .modal{
 	display: table-cell;
 	vertical-align: middle;
-	padding-bottom: 40%;
+	padding-bottom: 10%;
 	.modalBg{
 	  background: rgba(80,80,80,.3);
 	}
