--- a/src/containers/Opera/Opera.scss
+++ b/src/containers/Opera/Opera.scss
@@ -13,6 +13,24 @@
         margin-left: .04rem;
       }
     }
+    div.operaPicker{
+      position: fixed;
+      top: .78rem;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      section{
+        background: #fff;
+      }
+      p{
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(80, 80, 80, 0.3);
+      }
+    }
     article{
       font-size: $jzfontSize;
       i{
@@ -25,6 +43,10 @@
         margin-right: .06rem;
       }
     }
+    .addOpear{
+      color: $mainColor;
+      margin-left: $lrmargin;
+    }
   }
   section{
     border-top: 1px solid $borderColor;
@@ -35,15 +57,20 @@
       height: .45rem;
       line-height: .45rem;
       padding: 0 $lrmargin;
-      border-bottom: 1px solid $borderColor;
+      border-left: 5px solid $mainColor;
       p{
         border-top: .1rem solid $mainColor;
         margin-top: .18rem;
         margin-right: .04rem;
       }
+      p.curP{
+        border-left: .1rem solid $mainColor;
+        border-top: .08rem solid transparent;
+      }
     }
     ul{
       padding: 0 $lrmargin;
+      border-top: 1px solid $borderColor;
       li{
         color: $jzfontColor;
         padding: $tbmargin 0;
