--- a/src/components/Login-Register/Login-Register.scss
+++ b/src/components/Login-Register/Login-Register.scss
@@ -1,88 +1,78 @@
-.loginContainer {
-  position: relative;
-  width: 85%;
-  margin: 30px auto;
+@import '../../theme/variables';
 
-  div {
-    width: 100%;
-    height: 40px;
-    margin: 0;
-  }
-
-  .blank {
-    margin-bottom: 26px;
-  }
-
-  input {
-    width: 100%;
-    height: 35px;
-    padding-left: 45px;
-    border: 0;
-    border-bottom: 1px solid #d8d8d8;
-  }
-
-  .imgLeft {
-    position: absolute;
-    top: 0px;
-    left: 7px;
-    bottom: 5px;
-    width: 30px;
-    height: 30px;
-  }
-
-  .inputContainer {
+.loginContainerFa{
+  .loginContainer {
     position: relative;
-    margin-bottom: 13px;
+    width: 85%;
+    margin: 0rem auto;
 
-    .msgCodeIcon {
-      position: absolute;
-      right: 0px;
-      top: 4px;
-      font-size: 10px;
-      padding: 4px 7px;
-      border-radius: 15px;
-    }
-
-    .showPassword, .hidenPassword {
-      position: absolute;
-      right: 10px;
-      top: 5px;
-      width: 25px;
-      height: 25px;
-    }
-  }
-
-  .forgetPasswordContainer {
-    position: relative;
-
-    .forgetPassword {
-      position: absolute;
-      right: 7px;
-      font-size: 13px;
-      color: #f3a946;
-    }
-  }
-
-
-  .loginBtnContainer, .registerBtnContainer {
-    width: 100%;
-    margin-top: 20px;
-
-    button {
+    div {
       width: 100%;
-      height: 40px;
+      height: .4rem;
+      margin: 0;
+    }
+
+    .blank {
+      margin-bottom: .26rem;
+    }
+
+    input {
+      width: 100%;
+      height: .35rem;
+      padding-left: .45rem;
       border: 0;
-      background-color: #51A7F9;
-      border-radius: 5px;
-      color: #ffffff;
+      border-bottom: 1px solid #d8d8d8;
     }
 
-    button:active {
-      background-color: #4293E0;
+    .imgLeft {
+      position: absolute;
+      top: 0;
+      left: .07rem;
+      bottom: .05rem;
+      width: .3rem;
+      height: .3rem;
+    }
+
+    .inputContainer {
+      position: relative;
+      margin-bottom: .13rem;
+
+      .msgCodeIcon {
+        position: absolute;
+        right: 0;
+        top: .04rem;
+        font-size: .1rem;
+        padding: .04rem .07rem;
+        border-radius: .15rem;
+      }
+
+      .showPassword, .hidenPassword {
+        position: absolute;
+        right: .1rem;
+        top: .05rem;
+        width: .25rem;
+        height: .25rem;
+      }
+    }
+
+    .forgetPasswordContainer {
+      position: relative;
+
+      .forgetPassword {
+        position: absolute;
+        right: .07rem;
+        font-size: $xsfontSize;
+        color: #f3a946;
+      }
+    }
+
+
+    .loginBtnContainer, .registerBtnContainer {
+      margin-top: .2rem;
+    }
+
+    .registerBtnContainer {
+      margin-top: .32rem;
     }
   }
-
-  .registerBtnContainer {
-    margin-top: 32px;
-  }
-}
+}  
