--- a/src/containers/DatePlan/DatePlan.scss
+++ b/src/containers/DatePlan/DatePlan.scss
@@ -5,81 +5,13 @@
   font-size: $jzfontSize;
   position: relative;
   text-align: center;
+  min-height: 230px;
   .dateTitle{
     position: relative;
     li.curTab {
       color: #fff !important;
       background-color: $mainColor;
-    }
-    .scheduleFilterBtn{
-      position: absolute;
-      top: 0;
-      right: 0;
-      left: 0;
-      h3{
-        color: $mainColor;
-        font-weight: normal;
-        text-align: right;
-        margin-right: $lrmargin;
-        font-size: $jzfontSize;
-        height: 50px;
-        line-height: 44px;
-      }
-      .scheduleFilterCon{
-        width: 100%;
-        height: 100%;
-        text-align: left;
-        background-color: #fff;
-        padding: $tbmargin $lrmargin;
-        border-top:1px solid $borderColor;
-        border-bottom:1px solid $borderColor;
-        padding: $tbmargin $lrmargin;
-        position: relative;
-        z-index: 1000;
-        div{
-          padding: 4px 0;
-          i{
-            font-style: normal;
-            color: $mainColor;
-            position: absolute;
-            padding:4px 6px 4px 0;
-          }
-          section{
-            margin-left: 38px;
-            text-align: left;
-            width: 100%;
-            header span{
-              color: $mainColor;
-            }
-            span{
-              display: inline-block;
-              padding: 2px 0px;
-              border-radius: 14px;
-              margin:0 6px;
-              width: 26.3%;
-              text-align: center;
-            }
-            span.dateSpan{
-              padding:2px 6px;
-            }
-            span.curSpan{
-              background-color: $mainColor;
-              color: #fff;
-            }
-          }
-          .selectDateFilter{
-            width: auto;
-            p{
-              width: 12%;
-              line-height: .4rem;
-            }
-            div{
-              width: 44%;
-            }
-          }
-        }
-      }
-    }  
+    } 
   }
   .datePlanPicker{
     background: #fff;
@@ -182,6 +114,86 @@
   bottom: 0px;
   right: 0px;
 }
+
+.scheduleFilterBtn{
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  h3{
+    color: $mainColor;
+    font-weight: normal;
+    text-align: right;
+    margin-right: $lrmargin;
+    font-size: $jzfontSize;
+    height: 50px;
+    line-height: 44px;
+  }
+  .scheduleFilterCon{
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    background-color: #fff;
+    padding: $tbmargin $lrmargin;
+    border-top:1px solid $borderColor;
+    border-bottom:1px solid $borderColor;
+    padding: $tbmargin $lrmargin;
+    position: relative;
+    z-index: 1000;
+    div{
+      padding: 4px 0;
+      i{
+        font-style: normal;
+        color: $mainColor;
+        position: absolute;
+        padding:4px 6px 4px 0;
+      }
+      section{
+        padding-left: 38px;
+        text-align: left;
+        width: 100%;
+      }
+      .selectDateFilter{
+        .filterDate{
+          width: 44%;
+          border: 1px solid $borderColor;
+          border-radius: 3px;
+          position: relative;
+          .datePlanFilterPicker{
+            position: fixed;
+            top: 140px;
+            left: 0;
+            width: 100%;
+            z-index: 10000;
+            background: #fff;
+          }
+        }
+        .dateSpan{
+          width: 12%;
+          line-height: .4rem;
+          text-align: center;
+        }
+      }
+      .filterType{
+        header span{
+          color: $mainColor;
+        }
+        span{
+          display: inline-block;
+          padding: 2px 0px;
+          border-radius: 14px;
+          margin:0;
+          width: 33.3%;
+          text-align: center;
+        }
+        span.curSpan{
+          background-color: $mainColor;
+          color: #fff;
+        }
+      }
+    }
+  }
+} 
 
 .dayItemOut{
   height: 26px;
