--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -15,7 +15,7 @@ html{
 }
 
 body{
-  font-family: "黑体",SimHei,"Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: .14rem;
   background-color: #f2f2f2;
 }
