--- a/src/containers/LoginOrRegister/LoginOrRegister.scss
+++ b/src/containers/LoginOrRegister/LoginOrRegister.scss
@@ -33,7 +33,7 @@
       height: 40px;
       position: absolute;
       bottom: 0px;
-
+      text-align: center;
       li {
         z-index: 100;
         color: #ffffff;
