--- a/src/containers/Duty/Duty.scss
+++ b/src/containers/Duty/Duty.scss
@@ -128,6 +128,10 @@
   height: 1.12rem;
 }
 
+.dutyPicker{
+  
+}
+
 @media(max-width: 370px) {
   .duty .dutyTop table tr td div .dateSelf{
     background-size: 1.6rem;
