--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -14,6 +14,7 @@
   height:58px;
   background-color: #f7f7f7;
   border-top:1px solid $borderColor;
+  z-index: 10;
   .naviBtn {
     text-align: center;
     display: inline-block;
